--- a/src/components/styles/header.module.scss
+++ b/src/components/styles/header.module.scss
@@ -1,3 +1,9 @@
-.link {
-  color: #999999
+.header {
+  height: 50px;
+  width: 100%;
+
+  background-image: url("../resources/ena-logo.jpg");
+  background-repeat: no-repeat;
+  background-size: auto 50px;
+  background-position: center;
 }
