--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
-html, body, #___gatsby, #gatsby-focus-wrapper {
+html, body, #___gatsby, #gatsby-focus-wrapper, .tl-edges, .tl-wrapper {
   height: 100%;
   font-family: Arial;
-  font-size: 1.2em;
+  font-size: 42px;
 }
 
 body {
